# term-rewriting

./: first.cabal
app/: Main.hs
input/: array.trs  array2.trs  fact5.trs  mul.trs  qsort.trs
src/: Exp.hs  MyLib.hs  Parser.hs  TRS.hs  TRSv0.hs
test/: MyLibTest.hs
