cabal-version:      2.4
name:               first
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kentarow10
maintainer:         kenfan.fun@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                        ,TRS
                        ,Parser

    -- Modules included in this library but not exported.
    other-modules:    Exp
                      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
                    base ^>=4.14.3.0
                    , containers >= 0.5.9
                    , parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable first
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                        , first
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
                      , hspec >= 1.3
                      , QuickCheck
                      , first
                      , parsec